swagger docs with auth
